tests/paczka1/fuzzy1/25896516.err
Error in line 3: 2qTaAF39tO S864 52,7
Error in line 8: pDBkG A603 54,2
Error in line 28: pDBkG A101 274,7
